<resources>
    <string name="app_name">Project Demo</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="location">Location :</string>
    <string name="not_selected">Not selected</string>
    <string name="select">Select</string>
</resources>
